Bug 114519 - Sidebar Number Format drop down does not update cell contents on number format selection change
Summary: Sidebar Number Format drop down does not update cell contents on number forma...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: All All
: lowest trivial
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.1.0 target:6.0.1
Keywords:
Depends on:
Blocks: Sidebar-Properties-Number-Format
  Show dependency treegraph
 
Reported: 2017-12-18 02:34 UTC by Jim Raykowski
Modified: 2018-02-04 03:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2017-12-18 02:34:20 UTC
Hi All,

I would like to get confirmation of this bug before committing a patch. 

When a cell is in input/edit mode, cursor flashing in cell, and the sidebar Number Format panel 'Select a category of contents' drop down selection is changed, the cell contents does not update to the number format of selected category on selection change.

Steps to reproduce:

1. enter 12345 in a Calc cell
2. in sidebar Properties deck Number > Format panel > 'Select a category of contents' drop down, change General to any other selection.

result:
contents of cell is not updated to number format selected
Comment 1 Jacques Guilleron 2017-12-18 14:05:07 UTC
Hi Jim,

What I see:
Sidebar format is not update immediatly, only when Enter is used to validate, while the Format menu does it.
This lack is there since the begining in the sidebar.
Comment 2 Buovjaga 2017-12-25 19:13:53 UTC
Repro.

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: 3272525e6b47af30ea5d92571cd7a6214117d359
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded
Built on December 25th 2017
Comment 3 Jim Raykowski 2017-12-31 01:58:38 UTC
Here is a link to the patch
https://gerrit.libreoffice.org/#/c/46883/
Comment 4 Buovjaga 2018-01-01 21:16:16 UTC
(In reply to Jim Raykowski from comment #3)
> Here is a link to the patch
> https://gerrit.libreoffice.org/#/c/46883/

Confirmed the fix by cherry picking your change. Thanks :)

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: ac427eab77410e5d093f41df01b4e7f6bfc6b2bf
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded
Built on January 1st 2018
Comment 5 Commit Notification 2018-01-25 17:20:39 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7416c2ea6c25ec1ff60ce1055b79b216cd501140

tdf#114519 Update cell content on sidebar number format change

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2018-01-25 20:24:05 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4c6fc246c9d9388b7a512cb4371bc6bb09e8581b&h=libreoffice-6-0

tdf#114519 Update cell content on sidebar number format change

It will be available in 6.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.